# rusty-stm32-blinky

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
